# camera_dash_platform

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/camera_dash/: __init__.py  cli.py  examples_loader.py  main.py  mcp_server.py  plugins.py  settings.py
backend/camera_dash/api/: broadcast.py  cameras.py  clips.py  depth.py  draft.py  events.py  examples.py  notifications.py  pipelines.py  plugins.py  radiometric.py  snapshots.py  stats.py  streams.py  templates.py
backend/camera_dash/cameras/: _libuvc.py  base.py  flir_lepton.py  kinect_v1.py  manager.py  oak.py  rtsp.py  screen.py  uvc.py
backend/camera_dash/pipeline/: engine.py  graph.py  node.py  types.py
backend/camera_dash/pipeline/nodes/: sources.py
backend/camera_dash/pipeline/nodes/broadcasts/: snapshot.py  stream.py
backend/camera_dash/pipeline/nodes/conditions/: cooldown.py  counter.py  depth_volume.py  distance_gate.py  fall_detection.py  line_crossing.py  metadata_match.py  schedule.py  temperature_gate.py  zone.py
backend/camera_dash/pipeline/nodes/detectors/: anomaly.py  audio_class.py  coral_yolo.py  depth_background.py  mediapipe_face.py  mog2.py  ocr.py  onnx.py  opencv_dnn.py  optical_flow.py  pose.py  segmentation.py  vision_llm.py  yolo.py  yolo_world.py
backend/camera_dash/pipeline/nodes/sinks/: console.py  email.py  home_assistant.py  jsonl.py  kafka.py  mqtt.py  ntfy.py  point_cloud.py  pushover.py  recorder.py  slack.py  sqlite_event.py  stream.py  telegram.py  webhook.py
backend/camera_dash/pipeline/nodes/transforms/: annotate.py  colormap.py  crop.py  depth_colormap.py  enrich_with_depth.py  frame_sample.py  privacy_mask.py  reid.py  resize.py  throttle.py  tracker.py
backend/camera_dash/recording/: ring_buffer.py  writer.py
backend/camera_dash/storage/: db.py  models.py
backend/camera_dash/streaming/: event_bus.py  frame_bus.py  gst.py  mediamtx.py  registry.py  snapshot_registry.py
backend/camera_dash/utils/: radiometric.py
backend/scripts/: verify_hardware.py
backend/tests/: conftest.py  test_condition_nodes.py  test_graph_json.py  test_pipeline_engine.py  test_radiometric.py
configs/: deploy.dgx.yml  deploy.mac.yml  deploy.rpi.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  INSTALLATION.md  NODES.md  RASPBERRY_PI.md  TROUBLESHOOTING.md  USER_MANUAL.md
examples/pipelines/: audio_event_log.json  audio_event_log.meta.json  coral_doorway.json  coral_doorway.meta.json  cross_camera_reid.json  cross_camera_reid.meta.json  driveway_arrival.json  driveway_arrival.meta.json  fall_detection.json  fall_detection.meta.json  flir_person_log.json  flir_person_log.meta.json  ha_motion_lights.json  ha_motion_lights.meta.json  home_intrusion.json  home_intrusion.meta.json  kinect_depth_view.json  kinect_depth_view.meta.json  laptop_detect_log.json  laptop_detect_log.meta.json  license_plate_capture.json  license_plate_capture.meta.json  motion_with_annotation.json  motion_with_annotation.meta.json  multi_camera_branch.json  multi_camera_branch.meta.json  night_perimeter.json  night_perimeter.meta.json  office_occupancy.json  office_occupancy.meta.json  package_delivery.json  package_delivery.meta.json  person_detection_mqtt.json  person_detection_mqtt.meta.json  pet_door_camera.json  pet_door_camera.meta.json  ppe_compliance.json  ppe_compliance.meta.json  privacy_face_blur.json  privacy_face_blur.meta.json  (+10 more)
examples/plugins/camera_dash_demo_sink/: pyproject.toml
examples/plugins/camera_dash_demo_sink/camera_dash_demo_sink/: slack.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: manifest.webmanifest  service-worker.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/cameras/: CameraManager.tsx
frontend/src/clips/: ClipsBrowser.tsx
frontend/src/dashboard/: AlertTile.tsx  CameraTile.tsx  Dashboard.tsx  FlirOverlay.tsx  KinectDepthOverlay.tsx  LogTile.tsx  NotifyButton.tsx  PointCloudTile.tsx  PolygonEditor.tsx  SnapshotTile.tsx  StatsTile.tsx  StreamShareMenu.tsx  TimelineTile.tsx
frontend/src/editor/: MarkdownLite.tsx  NodeHelpPopover.tsx  NodePalette.tsx  PipelineEditor.tsx  PropertiesPanel.tsx  RecipesModal.tsx  SchemaForm.tsx  categoryMeta.ts  graphUtils.tsx  recipes.ts
frontend/src/editor/nodes/: PipelineNode.tsx
frontend/src/events/: EventStream.tsx
frontend/src/examples/: ExamplesGallery.tsx
mediamtx/: mediamtx.yml
scripts/: _root-backend-start.sh  _root-backend-stop.sh  capture_new_screenshots.py  capture_screenshots.py  dev-setup.sh  enable-flir-radiometric.sh  flir_radiometric.py  install-kinect-v1.sh  install-linux.sh  install-macos.sh  install-systemd.sh  run.sh  setup-passwordless-sudo.sh
