[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camera_dash_demo_sink"
version = "0.1.0"
description = "Example external plugin for camera_dash — a Slack-style webhook sink."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.entry-points."camera_dash.sinks"]
"sink.slack_demo" = "camera_dash_demo_sink.slack:SlackDemoSink"

[tool.hatch.build.targets.wheel]
packages = ["camera_dash_demo_sink"]
